# Optimus-Mrk_VI

install/: local_setup.sh  setup.sh
install/optimus_bringup/share/optimus_bringup/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/optimus_bringup/share/optimus_bringup/cmake/: optimus_bringupConfig-version.cmake  optimus_bringupConfig.cmake
install/optimus_bringup/share/optimus_bringup/launch/: camera.launch.xml
install/optimus_description/lib/optimus_description/: camera  lifecycle_manager  motor_driver  optimus_pi  ps4_controller  ultra_sonic_sensor
install/optimus_description/share/optimus_description/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/optimus_interfaces/share/optimus_interfaces/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/optimus_interfaces/share/optimus_interfaces/cmake/: export_optimus_interfaces__rosidl_generator_cExport.cmake  optimus_interfacesConfig.cmake  (+10 more)
log/: latest_build
src/: LICENSE
src/optimus_bringup/: CMakeLists.txt  package.xml
src/optimus_bringup/launch/: optimus_pi_bot.launch.py  optimus_pi_bot.launch.xml
src/optimus_description/: setup.py
src/optimus_description/optimus_description/: camera_node.py  optimus_pi_node.py  ps4_controller_node.py  ultra_sonic_sensor_node.py
src/optimus_interfaces/: CMakeLists.txt  package.xml
src/optimus_interfaces/action/: ControlOptimus.action
src/optimus_interfaces/msg/: MotorDriver.msg  UltraSonicRange.msg
(+37 files in other folders)
